--- a/index.html
+++ b/index.html
@@ -7,7 +7,25 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>Weather Application</h1>
+    <div class="mainContainer">
+        <div class="background">
+            <img src="Background image" alt="Background image">
+        </div>
+        <div class="info">
+            <h2 >Enter City name</h2>
+            <input type="text" id="city" placeholder="Enter city name">
+            <button id="submit">Get Weather</button>
+            <div id="weatherInfo">  
+                <h2>City Name: <span id="cityShow"></span></h2>
+                <h2>Temperature: <span id="temp"></span></h2>
+                <h2>wind: <span id="wind"></span></h2>
+                <h2>Weather <span id="description"></span></h2>
+                <h2>Forcast</h2>
+                <div id="forecast"></div>
+            </div>
+        </div>
+    </div>
 </body>
 <script src="script.js"></script>
 </html>
