--- a/index.html
+++ b/index.html
@@ -12,23 +12,23 @@
     <div class="mainContainer mt-5">
         <div class="flex justify-center items-center">
             <form class=" p-2 mt-4 flex border rounded-2xl px-3 bg-transparent text-xl" id="form">
-                <input type="text" id="city" placeholder="Enter City" class="bg-transparent focus:outline-none border-gray-300 p-1">
-                <submit id="submit" class="text-white ">
-                    <i class="fa-solid fa-magnifying-glass"></i>
+                <input type="text" id="city" placeholder="Enter City" class=" text-2xl text-white bg-transparent focus:outline-none border-gray-300 p-1">
+                <submit id="submit" class="text-white">
+                    <i class="fa-solid fa-magnifying-glass mt-2"></i>
                 </submit>
             </form>
         </div>
-        <div class="flex justify-center items-center" id="info">
+        <div class="flex justify-center items-center text-xl" id="info">
             <div class="mt-32 bg-black bg-opacity-50 text-white rounded-xl h-40 w-2/5">  
-                <h2 class="text-center pt-4">Weather in <span id="cityShow"></span></h2>
-                <ul class="flex justify-evenly w-100">
+                <h2 class="text-center pt-4"><span id="cityShow"></span></h2>
+                <ul class="flex justify-evenly w-100 mt-2">
                     <ol><span id="temp"> </span><br> Temperature</ol>
                     <ol><span id="wind"> </span><br> Wind</ol>
                     <ol><span id="description"> </span><br> Weather</ol>
                 </ul>
             </div>
         </div>
-        <div id="forecast"></div>
+        <!-- <div id="forecast"></div> -->
     </div>
 </body>
 <script src="script.js"></script>
